fixes bad scroll on mobile, fixes menu width, uses flex not grid

--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,34 @@
+:root {
+  --narrow-space: 2px;
+  --wide-space: 4px;
+
+  --color-button-width: 3rem;
+  --border-thickness: 1px;
+  --cursor-size: 23;
+
+  --border-radius: 4px;
+
+  --foreground-color-rgb: 0, 0, 0;
+  --foreground-color: rgb(var(--foreground-color-rgb));
+  --selected-color: #59fe13;
+  --background-color-rgb: 220, 220, 220;
+  --background-color: rgb(var(--background-color-rgb));
+  --light-color-rgb: 255, 255, 255;
+  --dark-light-opacity: 0.25;
+}
+
 body {
   margin: 0;
-  display: grid;
-  grid-template-areas: "menu canvas";
-  grid-template-columns: 10rem calc(100vw - 10rem);
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+  max-height: 100vh;
 }
 
 html {
-  background-color: gainsboro;
+  background-color: var(--background-color);
   font-family: Arial, Helvetica, sans-serif;
+  color: var(--foreground-color);
 }
 
 * {
@@ -29,22 +50,17 @@ menu {
   padding: 0;
 }
 
-fieldset {
-  border: solid gray 1px;
-  border-radius: 4px;
-}
-
 #menu {
-  grid-area: menu;
-  z-index: 2;
-
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  row-gap: 2px;
-  width: 10rem;
+  row-gap: var(--narrow-space);
+  padding: var(--narrow-space);
 
-  max-height: 100vh;
+  flex-grow: 0;
+  width: max-content;
+  min-width: max-content;
+  max-width: max-content;
   overflow-y: auto;
 }
 
@@ -53,53 +69,63 @@ fieldset {
 }
 
 #canvasContainer {
-  grid-area: canvas;
-  z-index: 1;
-
-  overflow: auto;
-  height: 100vh;
+  flex-grow: 2;
+  max-height: 100vh;
+  overflow: hidden;
 }
 
-#canvas {
+fieldset {
+  border: solid rgba(var(--foreground-color-rgb), var(--dark-light-opacity)) var(--border-thickness);
+  border-radius: var(--border-radius);
 }
 
 .color-table {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: 3rem;
+  grid-template-rows: var(--color-button-width);
+  row-gap: var(--narrow-space);
+  column-gap: var(--narrow-space);
 }
 
 .color-cell {
-  height: 100%;
-  width: 100%;
+  height: var(--color-button-width);
 }
 
 .menu__button {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 2fr;
   place-items: center;
-
-  width: 100%;
+  background-color: rgba(var(--light-color-rgb), var(--dark-light-opacity));
 }
 
-.menu__input {
+.menu__input,
+.menu__button,
+.color-cell {
   width: 100%;
+  border-radius: var(--border-radius);
+  border: solid var(--foreground-color) var(--border-thickness);
+}
+
+.menu__button:active,
+.menu__input:active,
+.color-cell:active {
+  border: solid rgba(var(--foreground-color-rgb), var(--dark-light-opacity)) var(--border-thickness);
 }
 
 .menu__item {
-  margin-bottom: 2px;
+  margin-bottom: var(--narrow-space);
 }
 
 .button--active {
-  border: solid green 3px;
+  background-color: var(--selected-color);
 }
 
 .canvas--draw {
-  cursor: url(assets/pencil.svg) 0 32, auto; /*TODO*/
+  cursor: url(assets/pencil.svg) 0 var(--cursor-size), auto;
 }
 
 .canvas--erase {
-  cursor: url(assets/eraser.svg) 0 32, auto; /*TODO*/
+  cursor: url(assets/eraser.svg) 0 var(--cursor-size), auto;
 }
 
 #menu header h1 {
@@ -110,41 +136,25 @@ fieldset {
   .no-print {
     display: none;
   }
-  body {
-    margin: 0;
-    display: grid;
-    grid-template-areas: "menu canvas";
-    grid-template-columns: 0 100vw;
-  }
 }
 @media screen and (max-width: 600px) {
-  /*TODO*/
   body {
     margin: 0;
-    display: grid;
-    grid-template-areas: "menu" "canvas";
-    grid-template-columns: 1fr;
+    flex-direction: column;
   }
   #menu {
-    grid-area: menu;
-    z-index: 2;
-
     list-style: none;
 
     display: flex;
     flex-direction: row;
     align-items: stretch;
-
-    margin: 0;
-    padding: 0;
-
-    align-items: stretch;
     justify-content: space-around;
 
     width: 100vw;
+    max-width: none;
+
     margin: 0;
-    padding: 0;
-    overflow-x: auto;
+    padding: var(--narrow-space);
   }
   .menu__button span {
     display: none;
@@ -153,8 +163,6 @@ fieldset {
     display: grid;
     grid-template-columns: 1fr;
     place-items: center;
-
-    /* width: 100%; */
   }
 
   .color-table {
@@ -165,13 +173,14 @@ fieldset {
   }
 
   fieldset {
-    padding-block-start: 0.25em;
-    padding-inline-start: 0.5em;
-    padding-inline-end: 0.5em;
-    padding-block-end: 0.5em;
+    padding-block-start: var(--wide-space);
+    padding-inline-start: var(--wide-space);
+    padding-inline-end: var(--wide-space);
+    padding-block-end: var(--wide-space);
+
+    flex-grow: 1;
   }
   #canvasContainer {
     touch-action: none;
-    overflow: auto;
   }
 }
